--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 	<title>WebGL 102</title>
 </head>
 <body>
+	<canvas id="webgl-102" width="800" height="600"></canvas>
 	<script src="main.js"></script>
 </body>
 </html>
