--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
 	<title>WebGL 102</title>
 </head>
 <body>
-	<canvas id="webgl-102" width="800" height="600"></canvas>
+  <canvas id="webgl-102" width="800" height="600"></canvas>
+  <img id="wall-texture" src="wall.png" width="0" height="0">
 	<script src="main.js"></script>
 </body>
 </html>
