--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,21 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>WebGL 102</title>
+  <title>WebGL 102</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+    }
+    .scene {
+      width: 100vw;
+      height: 100vh;
+      display: block;
+    }
+  </style>
 </head>
 <body>
-  <canvas id="webgl-102" width="800" height="600"></canvas>
+  <canvas id="webgl-102" class="scene" width="800" height="600"></canvas>
 	<script src="main.js"></script>
 </body>
 </html>
